--- a/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj
@@ -172,6 +172,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\GUtil.cpp" />
     <ClCompile Include="src\Learn3D\Mathf.cpp" />
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
     <ClCompile Include="src\Learn3D\Vector3.cpp" />
