--- a/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj
@@ -174,6 +174,7 @@
     </ClCompile>
     <ClCompile Include="src\GUtil.cpp" />
     <ClCompile Include="src\Learn3D\Mathf.cpp" />
+    <ClCompile Include="src\Learn3D\MathHelper.cpp" />
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
     <ClCompile Include="src\Learn3D\Vector3.cpp" />
     <ClCompile Include="src\Learn3D\Vector4.cpp" />
