--- a/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="src\Learn3D\Matrix3x3.cpp">
       <Filter>源文件\src\Learn3D</Filter>
     </ClCompile>
+    <ClCompile Include="src\Learn3D\Matrix4x4.cpp">
+      <Filter>源文件\src\Learn3D</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
