挪部分实现到cpp

--- a/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClCompile Include="src\Learn3D\Matrix4x4.cpp">
       <Filter>源文件\src\Learn3D</Filter>
     </ClCompile>
+    <ClCompile Include="src\Learn3D\Quaternion.cpp">
+      <Filter>源文件\src\Learn3D</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
