--- a/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnVulkan/LearnVulkan.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="src\Learn3D\MathHelper.cpp" />
     <ClCompile Include="src\Learn3D\Matrix3x3.cpp" />
     <ClCompile Include="src\Learn3D\Matrix4x4.cpp" />
+    <ClCompile Include="src\Learn3D\Quaternion.cpp" />
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
     <ClCompile Include="src\Learn3D\Vector3.cpp" />
     <ClCompile Include="src\Learn3D\Vector4.cpp" />
